# Card-Collection-Manager-3

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODOS
.github/workflows/: AGENTS.md  build-and-test.yml  feature-ci.yml  feature-linux.yml  feature-windows.yml  master-ci.yml  master-pr-title-guard.yml  master-windows.yml
app/: AGENTS.md  CMakeLists.txt  ccm.rc  main.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Toolchain.cmake
core/: AGENTS.md  CMakeLists.txt
core/include/ccm/domain/: Configuration.hpp  Enums.hpp  MagicCard.hpp  PokemonCard.hpp  Set.hpp  YuGiOhCard.hpp
core/include/ccm/games/: IGameModule.hpp
core/include/ccm/games/magic/: MagicCardPreviewSource.hpp  MagicGameModule.hpp  MagicSetSource.hpp
core/include/ccm/games/pokemon/: PokemonCardPreviewSource.hpp  PokemonGameModule.hpp  PokemonSetSource.hpp
core/include/ccm/games/yugioh/: YuGiOhCardPreviewSource.hpp  YuGiOhGameModule.hpp  YuGiOhSetSource.hpp
core/include/ccm/infra/: CprHttpClient.hpp  JsonCollectionRepository.hpp  JsonSetRepository.hpp  LocalImageStore.hpp  LocalPreviewByteCache.hpp  StdFileSystem.hpp
core/include/ccm/ports/: ICardPreviewSource.hpp  ICollectionRepository.hpp  IFileSystem.hpp  IHttpClient.hpp  IImageStore.hpp  IPreviewByteCache.hpp  ISetRepository.hpp
core/include/ccm/services/: CardFilter.hpp  CardPreviewService.hpp  CardSorter.hpp  CollectionService.hpp  ConfigService.hpp  ImageService.hpp  SetService.hpp
core/include/ccm/util/: AsciiUtils.hpp  FsNames.hpp  HttpGetMapping.hpp  Result.hpp  Rfc3986.hpp  YuGiOhPrintingSlot.hpp  YuGiOhSetLookup.hpp
core/src/domain/: Configuration.cpp  Enums.cpp  MagicCard.cpp  PokemonCard.cpp  Set.cpp  YuGiOhCard.cpp
core/src/games/magic/: MagicCardPreviewSource.cpp  MagicGameModule.cpp  MagicSetSource.cpp
core/src/games/pokemon/: PokemonCardPreviewSource.cpp  PokemonGameModule.cpp  PokemonSetSource.cpp
core/src/games/yugioh/: YuGiOhCardPreviewSource.cpp  YuGiOhGameModule.cpp  YuGiOhSetSource.cpp
core/src/infra/: CprHttpClient.cpp  JsonSetRepository.cpp  LocalImageStore.cpp  LocalPreviewByteCache.cpp  StdFileSystem.cpp
core/src/services/: CardFilter.cpp  CardPreviewService.cpp  CardSorter.cpp  ConfigService.cpp  ImageService.cpp  SetService.cpp
core/src/util/: FsNames.cpp
docs/: AGENTS.md  README.md  adding-a-new-game.md  assets-and-info-apis.md  caching.md  ci-cd-guide.md  dow-doc-build-locally.md  intro-to-new-developers.md  testing-and-test-code-of-conduct.md  versioning.md  windows-installer.md
scripts/: AGENTS.md  compute_feature_version.sh  compute_master_semver.sh  installer.nsi
tests/: AGENTS.md  CMakeLists.txt  ascii_utils_tests.cpp  card_filter_tests.cpp  card_preview_service_tests.cpp  card_sorter_tests.cpp  collection_service_tests.cpp  config_service_tests.cpp  cpr_http_client_tests.cpp  domain_json_tests.cpp  fs_names_tests.cpp  game_module_tests.cpp  http_get_mapping_tests.cpp  icard_preview_source_tests.cpp  image_service_tests.cpp  json_collection_repository_tests.cpp  json_set_repository_tests.cpp  local_image_store_tests.cpp  local_preview_byte_cache_tests.cpp  magic_card_preview_source_tests.cpp  magic_set_source_tests.cpp  pokemon_card_preview_source_tests.cpp  pokemon_set_source_tests.cpp  set_service_tests.cpp  std_file_system_tests.cpp  yugioh_card_preview_source_tests.cpp  yugioh_set_lookup_tests.cpp  yugioh_set_source_tests.cpp
tests/fakes/: InMemoryFileSystem.cpp  InMemoryFileSystem.hpp
ui_wx/: AGENTS.md  CMakeLists.txt
ui_wx/include/ccm/ui/: AppContext.hpp  AppVersion.hpp.in  BaseCardEditDialog.hpp  BaseCardListPanel.hpp  BaseSelectedCardPanel.hpp  CardEditDialog.hpp  CardEditModalGuard.hpp  IGameView.hpp  IconListCtrl.hpp  ImageViewerDialog.hpp  MagicCardEditDialog.hpp  MagicCardListPanel.hpp  MagicGameView.hpp  MagicSelectedCardPanel.hpp  MainFrame.hpp  PokemonCardEditDialog.hpp  PokemonCardListPanel.hpp  PokemonGameView.hpp  PokemonSelectedCardPanel.hpp  SelectedCardPanel.hpp  SettingsDialog.hpp  SvgIcons.hpp  SwitchCtrl.hpp  Theme.hpp  YuGiOhCardEditDialog.hpp  YuGiOhCardListPanel.hpp  YuGiOhGameView.hpp  YuGiOhSelectedCardPanel.hpp
ui_wx/src/: BaseEvents.cpp  CardEditDialog.cpp  IconListCtrl.cpp  ImageViewerDialog.cpp  MagicCardEditDialog.cpp  MagicCardListPanel.cpp  MagicGameView.cpp  MagicSelectedCardPanel.cpp  MainFrame.cpp  PokemonCardEditDialog.cpp  PokemonCardListPanel.cpp  PokemonGameView.cpp  PokemonSelectedCardPanel.cpp  SelectedCardPanel.cpp  SettingsDialog.cpp  SvgIcons.cpp  SwitchCtrl.cpp  Theme.cpp  YuGiOhCardEditDialog.cpp  YuGiOhCardListPanel.cpp  YuGiOhGameView.cpp  YuGiOhSelectedCardPanel.cpp
